--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>portfolio | Robin Hörnkvist Personal Portfolio Website</title>
     </head>
-    <body>
+    <body id="body-el" class="bg-dark">
       <div id="root"></div>
 
     </body>
